# iSynthesis

./: .gitignore  README.md  config.json  pyproject.toml  search.py
iSynthesis/: config.py
iSynthesis/algorithms/: __init__.py  cache.py  mcts.py  preparer.py  react.py  similarity.py  tree.py
iSynthesis/data/targets/: bevantolol.sdf
iSynthesis/tutorial/: tutorial-database.ipynb  tutorial-rules.ipynb  tutorial-zinc.ipynb
iSynthesis/utils/: __init__.py  clean_db.sh
